<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutFirst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:baselineAligned="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="50dp"
        android:layout_height="68dp"
        android:layout_above="@id/imageBeautifulvino"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:scaleType="centerInside"
        android:src="@drawable/ico_white" />

    <ImageView
        android:id="@+id/imageBeautifulvino"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:layout_above="@id/textViewVinoBello"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewVinoBello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonRegistratiFirst"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:fontFamily="@font/inter_ui_regular"
        android:lines="2"
        android:text="@string/text_view_vino_bello"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonRegistratiFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linerLayoutLogin"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="36dp"
        android:background="@drawable/layer_yellow_corner_button"
        android:text="@string/button_registrati"
        android:textAppearance="@style/ButtonAccediFont"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/linerLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textViewGiaRegistrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_ui_regular"
            android:text="@string/text_view_gia_registrato"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonLoginFirst"
            android:background="@android:color/transparent"
            android:layout_width="44dp"
            android:layout_marginLeft="4dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_ui_bold"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>


