<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewImpostazioni"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/imageViewImpostazioni"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@id/buttonSalvaImpostazioni"
                android:layout_centerHorizontal="true"
                android:background="@drawable/white_circle"
                android:outlineProvider="background"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/buttonFotoImpostazioni"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_alignStart="@+id/imageViewImpostazioni"
                android:layout_alignTop="@+id/imageViewImpostazioni"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/grey_circle"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:src="@drawable/button_foto" />

            <Button
                android:id="@+id/buttonSalvaImpostazioni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="21dp"
                android:background="@android:color/transparent"
                android:text="Salva"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_ui_regular"
                android:textColor="@color/colorRedPink"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="34dp"
            android:paddingRight="33dp"
            android:paddingTop="19dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextPurpleBrown">

                <AutoCompleteTextView
                    android:id="@+id/nomeImpostazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nome"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPurpleBrown"
                    android:textAppearance="@style/editTextFontPurpleBrown"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextPurpleBrown">

                <EditText
                    android:id="@+id/cittaImpostazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_citta"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPurpleBrown"
                    android:textAppearance="@style/editTextFontPurpleBrown"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextPurpleBrown">

                <EditText
                    android:id="@+id/professioneImpostazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_professione"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPurpleBrown"
                    android:textAppearance="@style/editTextFontPurpleBrown"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextPurpleBrown">

                <EditText
                    android:id="@+id/biografiaImpostazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_biografia"
                    android:textColor="@color/colorPurpleBrown"
                    android:textAppearance="@style/editTextFontPurpleBrown"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextPurpleBrown">

                <EditText
                    android:id="@+id/emailImpostazioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPurpleBrown"
                    android:textAppearance="@style/editTextFontPurpleBrown"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLogoutImpostazioni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="Logout"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_ui_regular"
                android:textColor="@color/colorRedPink"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
